// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > applies disabled styling to disabled options 1`] = `
<div
  inert=""
>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="w-full flex flex-col bg-white border border-color-divider rounded-lg transition-all text-size-sm"
    data-focus-visible="true"
    data-focused="true"
    data-open="true"
    data-rac=""
  >
    <button
      aria-controls="react-aria-:r12:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Test select"
      aria-labelledby="react-aria-:r18: react-aria-:r13:"
      class="w-full gap-3 flex justify-between p-4 items-center cursor-pointer text-left transition-all"
      data-focus-visible="true"
      data-focused="true"
      data-pressed="true"
      data-rac=""
      data-react-aria-pressable="true"
      id="react-aria-:r13:"
      tabindex="0"
      type="button"
    >
      <span
        class="text-[#13132E] flex-1 min-w-0"
      >
        Select an option
      </span>
      <svg
        aria-hidden="true"
        class="size-3 -translate-y-px flex-shrink-0 transition-transform rotate-180"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; width: 1px; white-space: nowrap; top: 0px; left: 0px;"
    >
      <label>
        <select
          tabindex="-1"
          title=""
        >
          <option />
          <option
            value="option1"
          >
            Option 1
          </option>
          <option
            value="option2"
          >
            Option 2
          </option>
        </select>
      </label>
    </div>
  </div>
</div>
`;

exports[`Select > renders with selected value 1`] = `
<div>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="w-full flex flex-col bg-white border border-color-divider rounded-lg transition-all text-size-sm"
    data-rac=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Test select"
      aria-labelledby="react-aria-:r7: react-aria-:r2:"
      class="w-full gap-3 flex justify-between p-4 items-center cursor-pointer text-left transition-all"
      data-rac=""
      data-react-aria-pressable="true"
      id="react-aria-:r2:"
      tabindex="0"
      type="button"
    >
      <span
        class="text-[#13132E] flex-1 min-w-0"
      >
        Option 1
      </span>
      <svg
        aria-hidden="true"
        class="size-3 -translate-y-px flex-shrink-0 transition-transform rotate-0"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      data-a11y-ignore="aria-hidden-focus"
      data-react-aria-prevent-focus="true"
      data-testid="hidden-select-container"
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; width: 1px; white-space: nowrap; top: 0px; left: 0px;"
    >
      <label>
        <select
          tabindex="-1"
          title=""
        >
          <option />
          <option
            value="option1"
          >
            Option 1
          </option>
          <option
            value="option2"
          >
            Option 2
          </option>
        </select>
      </label>
    </div>
  </div>
</div>
`;
